@@ -2,13 +2,16 @@
 
 	* swank.lisp (wait-for-event): Add timeout argument.  This is used
 	for :fd-handler and :sigio style where we only process events as
-	long we don't block.
+	long as we don't block.
 	(wait-for-event/event-loop, read-event)
 	(decode-message, receive-if): Ditto.
-	(process-events): Renamed from read-from-emacs.
+	(process-requests): Renamed from read-from-emacs.
 	(handle-requests): Renamed from handle-request. Take timeout
 	argument.  Update callers.
 	(process-available-input): Deleted.
+	(with-swank-error-handler): Renamed from
+	with-reader-error-handler.
+	(with-connection): Use it.
 
 2008-08-10  Helmut Eller  <heller@common-lisp.net>
 
